--- a/ProgettinoNHibernate/ProgettinoNHibernate/ProgettinoNHibernate/ProgettinoNHibernate.csproj
+++ b/ProgettinoNHibernate/ProgettinoNHibernate/ProgettinoNHibernate/ProgettinoNHibernate.csproj
@@ -189,9 +189,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\EnityBase.cs" />
+    <Compile Include="Models\Entities\IdentifiedEntity.cs" />
+    <Compile Include="Models\Entities\Negozi.cs" />
+    <Compile Include="Models\Entities\Prodotti.cs" />
+    <Compile Include="Models\Entities\Tempo.cs" />
+    <Compile Include="Models\Entities\Vendite.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Mappings\NegoziMap.cs" />
+    <Compile Include="Models\Mappings\ProdottiMap.cs" />
+    <Compile Include="Models\Mappings\TempoMap.cs" />
+    <Compile Include="Models\Mappings\VenditeMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
