--- a/ProgettinoNHibernate/ProgettinoNHibernate/ProgettinoNHibernate/Web.config
+++ b/ProgettinoNHibernate/ProgettinoNHibernate/ProgettinoNHibernate/Web.config
@@ -9,7 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="test" connectionString="Server=10.110.13.138;Database=test;Uid=dotnet;Pwd=scaiscai;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="test" connectionString="Server=10.110.13.138;Database=test;Uid=dotnet;Pwd=scaiscai;" providerName="MySql.Data.MySqlClient" />-->
+    <add name="udb" connectionString="Password=scai%scai;Persist Security Info=True;User ID=sa;Initial Catalog=TestNHibernate;Data Source=(local)\SQLEXPRESS" />
+    
+    
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
